# Snowflake-DBT-On-AWS

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: README.md  ci.yml  dbt-test.yml  docker-build.yml  terraform-plan.yml
dags/: README.md  dbt_dag.py  ingestion_dag.py  processing_dag.py
dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml  selectors.yml
dbt/macros/: automate_dv_duckdb_compat.sql  custom_logging.sql  mask_account_number.sql
dbt/models/marts/: _marts.yml  mart_customer_360.sql
dbt/models/staging/: _sources.yml  stg_banking_accounts.sql  stg_customer.sql  stg_transactions.sql
dbt/models/vault/hubs/: hub_account.sql  hub_customer.sql
dbt/models/vault/links/: link_customer_account.sql  t_link_transactions.sql
dbt/models/vault/satellites/: sat_account_balance.sql  sat_customer_profile.sql
docker/: Dockerfile-airflow  Dockerfile-dbt  Dockerfile-duckdb-ui  Dockerfile-spark  Dockerfile-spark-local  README.md  docker-compose.yml  duckdb_ui_server.py  spark-defaults.conf
docs/: SETUP.md  architecture.md  images.md  runbook.md
infrastructure/: README.md
infrastructure/K8S/: airflow-deployment.yaml  dbt-runner.yaml  spark-job.yaml
scripts/: deploy.sh
spark_jobs/: README.md  bronze_ingestion.py  silver_transform.py
spark_jobs/data/raw/: README.md  accounts.csv  customers.csv  transactions.csv
spark_jobs/utils/: spark_utils.py
terraform/: providers.tf  variables.tf
terraform/modules/aws/eks/: main.tf  outputs.tf  (+1 more)
terraform/modules/snowflake/: main.tf  variables.tf
(+2 files in other folders)
