[project]
name = "aws-snowflake-dbt-project"
version = "0.1.0"
description = "Enterprise banking data platform on AWS, Snowflake, Airflow, Spark, and dbt"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "python-dotenv==1.0.1",
  "pyyaml==6.0.1",
  "psycopg2-binary>=2.9,<3",
  "apache-airflow==2.8.1",
  "apache-airflow-providers-amazon==8.15.0",
  "apache-airflow-providers-snowflake==5.3.0",
  "apache-airflow-providers-apache-spark==4.6.0",
  "dbt-core==1.7.4",
  "dbt-snowflake==1.7.1",
  "astronomer-cosmos[dbt-snowflake]==1.3.0",
  "boto3==1.34.22",
  "botocore==1.34.22",
  "s3fs==2024.2.0",
  "awscli==1.32.22",
  "snowflake-connector-python[pandas]==3.6.0",
  "snowflake-sqlalchemy==1.5.1",
  "pyspark==3.5.0",
  "pandas==2.1.4",
  "pyarrow==14.0.2",
  "protobuf>=4.25.3,<5",
  "fastparquet==2023.10.1",
  "numpy==1.26.3",
  "requests==2.31.0",
  "python-dateutil==2.8.2",
]

[dependency-groups]
dev = [
  "black==24.4.2",
  "flake8==7.1.1",
  "isort==5.13.2",
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "pytest-mock==3.14.0",
  "great-expectations==0.18.8",
  "sqlfluff==3.0.0",
  "sqlfluff-templater-dbt==3.0.0",
  # Local Snowflake mock via DuckDB
  "dbt-duckdb==1.7.3",
]

[tool.uv]
default-groups = ["dev"]
